<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu_recipe">
        <menu>
            <item
                android:id="@+id/nav_recipe_add_research_tamplet"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_recipe_add_research_tamplet" />
            <item
                android:id="@+id/nav_recipe_add_simple"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_recipe_add_simple" />
            <item
                android:id="@+id/nav_recipe_list"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_recipe_list" />
        </menu>
    </item>

    <item android:title="@string/menu_share_recipe">
        <menu>
            <item
                android:id="@+id/nav_share_square_recipe"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_share_square_recipe" />
            <item
                android:id="@+id/nav_share_suggest_tamplet"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share_suggest_tamplet" />
            <item
                android:id="@+id/nav_share_simple_recipe"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_share_simple_recipe" />
            <item
                android:id="@+id/nav_share_in_action_research"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_share_in_action_research" />
        </menu>
    </item>

    <item android:title="@string/menu_board_recipe">
        <menu>
            <item
                android:id="@+id/nav_board_report"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_board_report" />
            <item
                android:id="@+id/nav_board_free"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_board_free" />
        </menu>
    </item>

</menu>
