<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.recipelab.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_recipe_researching_list"
            app:destination="@id/nav_recipe_researching_list" />
    </fragment>

    <fragment
        android:id="@+id/nav_recipe_researching_list"
        android:name="com.example.recipelab.ui.RecipeResearch.RecipeResearchingListFragment"
        tools:layout="@layout/fragment_recipe_research_list"
        android:label="연구 레시피"/>

    <fragment
        android:id="@+id/nav_recipe_add_research_tamplet"
        android:name="com.example.recipelab.ui.recipeAdd.AddResearchTampletFragment"
        android:label="@string/menu_recipe_add_research_tamplet"
        tools:layout="@layout/fragment_recipe_add_research_tamplet" >
        <action
            android:id="@+id/action_nav_recipe_add_research_tamplet_to_nav_2"
            app:destination="@id/nav_2"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_2"
        android:name="com.example.recipelab.ui.gallery.GalleryFragment"
        tools:layout="@layout/fragment_gallery">
        <action
            android:id="@+id/action_nav_2_to_nav_recipe_list"
            app:destination="@+id/nav_home" />
    </fragment>


    <fragment
        android:id="@+id/nav_recipe_add_simple"
        android:name="com.example.recipelab.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_recipe_list"
        android:name="com.example.recipelab.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_recipe_list_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_share_square_recipe"
        android:name="com.example.recipelab.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share_suggest_tamplet"
        android:name="com.example.recipelab.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_share_simple_recipe"
        android:name="com.example.recipelab.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_share_in_action_research"
        android:name="com.example.recipelab.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_board_report"
        android:name="com.example.recipelab.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_board_free"
        android:name="com.example.recipelab.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
</navigation>